--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^7.5.1",
     "bcrypt": "^5.0.0",
     "mongoose": "^5.11.16",
+    "mongoose-paginate": "^5.0.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
